Update and fix Iris' shader menus